--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ python:
   - "2.7"
 install: "python ./setup.py install"
 script: "python -m girlfriend.testing.runalltests"
+before_install:
+  - pip install codecov
+after_success:
+  - codecov
