--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist=py27,pep8
+envlist=py27,flake8
 
 [testenv]
 deps=nose
 commands=python -m girlfriend.testing.runalltests
 
-[testenv:pep8]
-deps=pep8
-commands=pep8
+[testenv:flake8]
+deps=flake8
+commands=flake8
